# cloudstrate-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cloudstrate/: __init__.py  __main__.py
cloudstrate/analyst/: __init__.py  query.py  server.py
cloudstrate/auth/: __init__.py
cloudstrate/builder/: __init__.py  terraform.py
cloudstrate/cli/: __init__.py  analyst.py  build.py  config_cmd.py  main.py  map.py  scan.py  setup.py
cloudstrate/config/: __init__.py  loader.py  schema.py
cloudstrate/connectors/: __init__.py
cloudstrate/core/: __init__.py
cloudstrate/knowledge/: __init__.py
cloudstrate/llm/: __init__.py
cloudstrate/mapper/: __init__.py  phase1.py  phase2.py
cloudstrate/resilience/: __init__.py
cloudstrate/scanner/: __init__.py  aws.py  cartography.py  github.py
cloudstrate/setup/: __init__.py  aws.py  github.py  neo4j.py
cloudstrate/state/: __init__.py
cloudstrate/tests/: __init__.py  test_analyst.py  test_builder.py  test_cli.py  test_config.py  test_mapper.py  test_scanner.py  test_setup.py
cloudstrate/utils/: __init__.py
kubernetes/: analyst.yaml  configmap.yaml  deploy.sh  kustomization.yaml  namespace.yaml  neo4j.yaml  scanner-job.yaml  secret.yaml
